# tui-sender

./: Cargo.toml  README.md
messages/: cat.json  dog.json  dog2.json  elephant.json  hamster.json
src/: app.rs  args.rs  client.rs  main.rs  server.rs  ui.rs
src/app/: actions.rs  client.rs  meta.rs  msgs.rs  people_info.rs  server.rs  store.rs
