[package]
name = "tui-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
itertools = "0.14.0"
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
